# aiutp

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  PLANNING.md  README.md  TASK.md  TASK_DONE.md  rebar.config
c_src/: Buffer.cpp  Buffer.h  ai_utp.c  aiutp.hpp  aiutp_ctx.cpp  aiutp_ctx.hpp  utp_internal.cpp  utp_internal.h  utp_utils.cpp
cmake/: FindErlang.cmake
doc/: aiutp.html  aiutp_acceptor.html  aiutp_app.html  aiutp_buffer.html  aiutp_channel.html  aiutp_channel_sup.html  aiutp_delay.html  aiutp_net.html  aiutp_packet.html  aiutp_pcb.html  aiutp_pcb_cc.html  aiutp_pcb_timeout.html  aiutp_queue.html  aiutp_test.html  edoc-info  index.html  modules-frame.html  overview-summary.html  overview.edoc
examples/: utp_client.erl  utp_server.erl
include/: ai_utp.hrl  aiutp.hrl
src/: ai_utp.erl  ai_utp_acceptor.erl  ai_utp_buffer.erl  ai_utp_cc.erl  ai_utp_conn.erl  ai_utp_dispatch.erl  ai_utp_ledbat.erl  ai_utp_net.erl  ai_utp_net_util.erl  ai_utp_process.erl  ai_utp_protocol.erl  ai_utp_rtt.erl  ai_utp_rx.erl  ai_utp_socket.erl  ai_utp_socket_sup.erl  ai_utp_stream.erl  ai_utp_tx.erl  ai_utp_util.erl  ai_utp_worker.erl  ai_utp_worker_sup.erl  aiutp.app.src  aiutp.erl  aiutp_acceptor.erl  aiutp_app.erl  aiutp_buffer.erl  aiutp_channel.erl  aiutp_channel_sup.erl  aiutp_conn_manager.erl  aiutp_delay.erl  aiutp_dispatch.erl  aiutp_handler.erl  aiutp_mtu.erl  aiutp_net.erl  aiutp_packet.erl  aiutp_pcb.erl  aiutp_pcb_cc.erl  aiutp_pcb_timeout.erl  aiutp_protocol.erl  aiutp_queue.erl  aiutp_rtt.erl  (+10 more)
test/: aiutp_bench_tests.erl  aiutp_buffer_tests.erl  aiutp_channel_recv_tests.erl  aiutp_channel_tests.erl  aiutp_delay_tests.erl  aiutp_mtu_integration_tests.erl  aiutp_mtu_tests.erl  aiutp_net_tests.erl  aiutp_packet_tests.erl  aiutp_pcb_cc_tests.erl  aiutp_pcb_tests.erl  aiutp_pcb_timeout_tests.erl  aiutp_prop_tests.erl  run_bench.erl  (+5 more)
(+23 files in other folders)
